# FairLens-

./: .gitignore  LICENSE  README(2).md  README.md  pyproject.toml  requirements.txt
examples/: adult_demo.py  compas_demo.py  german_demo.py  run_demo.py  synthetic_demo.py
fairlens/: __init__.py  audit.py  cli.py
fairlens/annex3/: __init__.py  mapping.py
fairlens/audit/: __init__.py  auditor.py  pipeline.py  validator.py
fairlens/config/: __init__.py  defaults.py
fairlens/datasets/: __init__.py  adult.py  compas.py  german.py  loaders.py  preprocessing.py  synthetic.py
fairlens/mai/: __init__.py  agreement.py  weighting.py
fairlens/metrics/: __init__.py  aif360.py  base.py  common.py  fairlearn.py  fairlearn_metrics.py  registry.py  utils.py
fairlens/report/: __init__.py  generator.py  html.py  json.py  markdown.py
fairlens/schemas/: audit_result.py  metric_result.py
fairlens/utils/: constants.py  logger.py  validation.py
tests/: conftest.py  test_annex3.py  test_audit.py  test_cli.py  test_mai.py  test_metrics.py  test_report.py
